--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,7 @@
         "client.h": "c",
         "gtk.h": "c",
         "libmx.h": "c"
-    }
+    },
+    "editor.formatOnSave": true,
+    "editor.formatOnSaveTimeout": 1500
 }
