--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,10 @@
         "galloca.h": "c",
         "gatomic.h": "c",
         "gtypes.h": "c",
-        "typeinfo": "c"
+        "typeinfo": "c",
+        "array": "c",
+        "string": "c",
+        "string_view": "c"
     },
     "editor.formatOnSave": true,
     "editor.formatOnSaveTimeout": 1500
