fix registration and login

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,8 @@
         "array": "c",
         "string": "c",
         "string_view": "c",
-        "jansson.h": "c"
+        "jansson.h": "c",
+        "curl.h": "c"
     },
     "editor.formatOnSave": true,
     "editor.formatOnSaveTimeout": 1500
