add delete and update message in database and server

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,8 @@
         "jansson.h": "c",
         "curl.h": "c",
         "ranges": "c",
-        "span": "c"
+        "span": "c",
+        "functional": "c"
     },
     "editor.formatOnSave": true,
     "editor.formatOnSaveTimeout": 1500
