--- a/client/Makefile
+++ b/client/Makefile
@@ -23,13 +23,17 @@ LIB_FLAGS = -lmx -lssl -lcjson -lsqlite3 -lcrypto\
 			-L$(CJSON_DIR) $(CJSON_NAME)\
 			-lm\
 
+OS := $(shell uname)
+
+GTK4_FLAGS := $(shell pkg-config --cflags --libs gtk4)
+
 all:  $(NAMEBIN) clean
 
 $(NAMEBIN): 
 	mkdir -p $(OBJDIR)
-	$(CC) $(CFLAGS) `pkg-config --cflags gtk4` -c $(SRC_FILES)
+	$(CC) $(CFLAGS) $(GTK4_FLAGS) -c $(SRC_FILES)
 	mv *.o $(OBJDIR)
-	$(CC) $(CFLAGS) `pkg-config --cflags gtk4` -o $(NAMEBIN) $(OBJS) $(LIB_FLAGS) -lcurl `pkg-config --libs gtk4`
+	$(CC) $(CFLAGS) $(GTK4_FLAGS) -o $(NAMEBIN) $(OBJS) $(LIB_FLAGS) -lcurl $(GTK4_FLAGS)
 
 clean:
 	rm -f $(OBJS)
